--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <!doctype HTML>
+<title> Brave Browser</title>
+<link rel="icon" href="https://brave.com/static-assets/images/brave-favicon.png">
+<html>
+  <body>
+  </body>
+</html>
